manifest/test/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-tailscale
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik-tailscale
  rules:
  - host: nginx-ingress.tailscale.oky.pke.str08.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              name: http
